// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Check completed, action_required > force update the branch 1`] = `
"Repository rule violations found

Required status check "completed/action_required" is action required.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check completed, cancelled > force update the branch 1`] = `
"Repository rule violations found

Required status check "completed/cancelled" is cancelled.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check completed, failure > force update the branch 1`] = `
"Repository rule violations found

Required status check "completed/failure" is failing.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check completed, neutral > force update the branch 1`] = `"success"`;

exports[`Check completed, skipped > force update the branch 1`] = `"success"`;

exports[`Check completed, success > force update the branch 1`] = `"success"`;

exports[`Check completed, timed_out > force update the branch 1`] = `
"Repository rule violations found

Required status check "completed/timed_out" is timed out.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check in_progress, action_required > force update the branch 1`] = `
"Repository rule violations found

Required status check "in_progress/action_required" is action required.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check in_progress, cancelled > force update the branch 1`] = `
"Repository rule violations found

Required status check "in_progress/cancelled" is cancelled.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check in_progress, failure > force update the branch 1`] = `
"Repository rule violations found

Required status check "in_progress/failure" is failing.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check in_progress, neutral > force update the branch 1`] = `"success"`;

exports[`Check in_progress, skipped > force update the branch 1`] = `"success"`;

exports[`Check in_progress, success > force update the branch 1`] = `"success"`;

exports[`Check in_progress, timed_out > force update the branch 1`] = `
"Repository rule violations found

Required status check "in_progress/timed_out" is timed out.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check queued, action_required > force update the branch 1`] = `
"Repository rule violations found

Required status check "queued/action_required" is action required.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check queued, cancelled > force update the branch 1`] = `
"Repository rule violations found

Required status check "queued/cancelled" is cancelled.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check queued, failure > force update the branch 1`] = `
"Repository rule violations found

Required status check "queued/failure" is failing.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;

exports[`Check queued, neutral > force update the branch 1`] = `"success"`;

exports[`Check queued, skipped > force update the branch 1`] = `"success"`;

exports[`Check queued, success > force update the branch 1`] = `"success"`;

exports[`Check queued, timed_out > force update the branch 1`] = `
"Repository rule violations found

Required status check "queued/timed_out" is timed out.

 - https://docs.github.com/rest/git/refs#update-a-reference"
`;
